@@ -370,6 +370,12 @@ display_tune_notifications = false
 # other resources with carbons enabled.
 enable_carbons = false
 
+# Acknowledge message delivery receipts (XEP-0184)
+ack_message_receipts = true
+
+# Ask for message delivery receipts (XEP-0184)
+request_message_receipts = true
+
 # Receive the tune notifications or not (in order to display informations
 # in the roster).
 # If this is set to false, then the display_tune_notifications
