@@ -37,6 +37,8 @@ Table of all XEPs implemented in poezio.
 +----------+-------------------------+---------------------+
 |0172      |User Nickname            |100%                 |
 +----------+-------------------------+---------------------+
+|0184      |Message Delivery Receipts|100%                 |
++----------+-------------------------+---------------------+
 |0191      |Simple Communication     |95%                  |
 |          |Blocking                 |                     |
 +----------+-------------------------+---------------------+
