@@ -3,6 +3,7 @@ For more detailed changelog, see the roadmap:
 http://dev.louiz.org/projects/poezio/roadmap
 
 * Poezio 0.8.3 - dev
+- Implement XEP-0184 (message delivery receipts)
 - better setup scripts (use setuptools)
 - Better timezone handling
 - Better alias plugin, with permanent alias storage
